force-app/main/default/objects/Contact/fields/Grade__c.field-meta.xml
<CustomField>
    <fullName>Grade__c</fullName>
    <label>Grade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>K - 5</fullName>
            </value>
            <value>
                <fullName>K - 12</fullName>
            </value>
            <value>
                <fullName>1st</fullName>
            </value>
            <value>
                <fullName>2nd</fullName>
            </value>
            <value>
                <fullName>3rd</fullName>
            </value>
            <value>
                <fullName>4th</fullName>
            </value>
            <value>
                <fullName>5th</fullName>
            </value>
            <value>
                <fullName>6th - 8th</fullName>
            </value>
            <value>
                <fullName>9th - 12th</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>