force-app/main/default/objects/Contact/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Classroom Teacher</fullName>
            </value>
            <value>
                <fullName>Special Education Teacher</fullName>
            </value>
            <value>
                <fullName>Instructional Coach/Specialist</fullName>
            </value>
            <value>
                <fullName>School Site Administrator</fullName>
            </value>
            <value>
                <fullName>District Administrator</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>